Fixed body spacing

--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -5,3 +5,7 @@
   -o-background-size: cover;
   background-size: cover;
 }
+
+body {
+  padding-top: 70px;
+}
